--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.7"
+    "@types/react-scroll": "^1.8.7",
+    "postcss-nesting": "^12.0.1"
   }
 }
